--- a/Homeworks/Assignment-7/index.html
+++ b/Homeworks/Assignment-7/index.html
@@ -61,7 +61,7 @@
 <br><br><label for="check">Terms And Condition: </label>
 <input type="checkbox" id="check" required="true"/>
 
-<br><br><input type="submit" value="S">
+<br><br><input type="submit" value="Submit">
 
 
 </body>
