Done inline and external css

--- a/Homeworks/Assignment-12/index.html
+++ b/Homeworks/Assignment-12/index.html
@@ -27,6 +27,14 @@
       <h1 id="college"> College : GH Raisoni</h1>
 
 
+      <h1 class="name">Name : Piyush Aglawe</h1><br><br>
+      <h1 class="name">Name : Piyush Aglawe</h1><br><br>
+      <h1 class="name">Name : Piyush Aglawe</h1><br><br>
+      <h1 class="name">Name : Piyush Aglawe</h1><br><br>
+      <h1 class="name">Name : Piyush Aglawe</h1><br><br>
+      <h1 class="name">Name : Piyush Aglawe</h1><br><br>
+      <h1 class="name">Name : Piyush Aglawe</h1><br><br>
+
 
 </body>
 </html>
