--- a/Homeworks/Assignment-12/index.html
+++ b/Homeworks/Assignment-12/index.html
@@ -26,15 +26,7 @@
       <h1 class="name">Name : Piyush Aglawe</h1><br><br>
       <h1 id="college"> College : GH Raisoni</h1>
 
-
-      <h1 class="name">Name : Piyush Aglawe</h1><br><br>
-      <h1 class="name">Name : Piyush Aglawe</h1><br><br>
-      <h1 class="name">Name : Piyush Aglawe</h1><br><br>
-      <h1 class="name">Name : Piyush Aglawe</h1><br><br>
-      <h1 class="name">Name : Piyush Aglawe</h1><br><br>
-      <h1 class="name">Name : Piyush Aglawe</h1><br><br>
-      <h1 class="name">Name : Piyush Aglawe</h1><br><br>
-
+      <img src="../Assignment-4/pexels-michael-block-3225517.jpg" alt="" class="img">
 
 </body>
 </html>
