--- a/Homeworks/Assignment-13/index.html
+++ b/Homeworks/Assignment-13/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        button{
+                 height: 30px;
+                 width: 50px;
+        }      
+
+    </style>
 </head>
+
 <body>
-    
+    <button>Submit</button>
+    <button>Submit</button>
+    <button>Submit</button>
+    <button>Submit</button>
+    <button>Submit</button>
 </body>
 </html>
