--- a/Homeworks/Assignment-13/index.html
+++ b/Homeworks/Assignment-13/index.html
@@ -6,18 +6,43 @@
     <title>Document</title>
     <style>
         button{
-                 height: 30px;
-                 width: 50px;
-        }      
+                 height: 50px;
+                 width: 100px;
+                 margin-left: 20px;
+        } 
+        #btn1{
+            background-color: rgb(161, 161, 226);
+            border: 2px solid black;
+        }   
+        #btn2{
+            background-color: rgb(232, 154, 154);
+            border: 2px solid black;
+            border-radius: 10px;
+        }  
+        #btn3{
+            background-color: rgb(104, 239, 239);
+            border: 2px solid black;
+            border-radius: 0 20px 0 20px;
+        }
+        #btn4{
+                 background-color: rgb(215, 165, 200);
+                 border: 2px solid black;
+                 border-radius: 0 20px 20px 0;
+        }
+        #btn5{
+            background-color: rgb(99, 151, 105);
+             border: 2px solid black;
+             border-radius: 30px;
+        }
 
     </style>
 </head>
 
 <body>
-    <button>Submit</button>
-    <button>Submit</button>
-    <button>Submit</button>
-    <button>Submit</button>
-    <button>Submit</button>
+    <button id="btn1">Submit</button>
+    <button id="btn2">Submit</button>
+    <button id="btn3">Submit</button>
+    <button id="btn4">Submit</button>
+    <button id="btn5">Submit</button>
 </body>
 </html>
