--- a/Homeworks/Assignment-15/index.html
+++ b/Homeworks/Assignment-15/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inline-Block</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
-    
+        <div class="main">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
 </body>
 </html>
