--- a/Homeworks/Assignment-15/index.html
+++ b/Homeworks/Assignment-15/index.html
@@ -7,11 +7,21 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-        <div class="main">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-        </div>
+     
+           <div class="main">
+            <div class="box card1">
+                <img src="https://www.simplilearn.com/ice9/free_resources_article_thumb/tester-or-developer-what-suits-you-the-most.jpg" alt="">
+                <hr>
+                <button>developer</button>
+                
+            </div>
+            <div class="box">
+                <img src="" alt="">
+            </div>
+            <div class="box">
+                <img src="" alt="">
+            </div>
+           </div>
+
 </body>
 </html>
