--- a/Homeworks/Assignment-17/index.html
+++ b/Homeworks/Assignment-17/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
- 
+         <div class="container">
+            <div class="card">
+                <img src="https://rukminim2.flixcart.com/image/850/1000/kzygpzk0/poster/o/i/3/medium-doraemon-poster-paper-print-wall-poster-print-on-art-original-imagbukjd3vtfgdh.jpeg?q=90&crop=false" alt="">
+                <h1 >Doremon</h1>
+                <h4>PG-13/ 2h 49min/ Adventure, Drama, Cartoon</h4>
+                <div class="summary">
+              <h2>SUMMARY</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero expedita similique eius, veritatis voluptates maxime! Nihil nemo unde fugit tempore qui sint! Perferendis voluptates dicta itaque, qui dolor nostrum magni natus animi harum ipsum alias, ex id architecto tenetur pariatur ducimus, quibusdam modi voluptate numquam voluptatum sapiente blanditiis voluptas. Necessitatibus!</p> 
+              <b class="p"><i>Matthew McConaughey,Anne Hathaway,Jessica Chastain</i></b>
+            </div>
+            <button>Watch Movie</button>
+            </div>
+            <div class="card"></div>
+            <div class="card"></div>
+         </div>
 </body>
 </html>
