--- a/Homeworks/Assignment-18/index.html
+++ b/Homeworks/Assignment-18/index.html
@@ -22,6 +22,18 @@
         <button class="btn">2</button>
         <button class="btn">.</button>
 
+        <button class="btn">M+</button>
+        <button class="btn">8</button>
+        <button class="btn">5</button>
+        <button class="btn">2</button>
+        <button class="btn">.</button>
+
+        <button class="btn">M+</button>
+        <button class="btn">8</button>
+        <button class="btn">5</button>
+        <button class="btn">2</button>
+        <button class="btn">.</button>
+
    </div>
     </div>
     
