done calculator project

--- a/Homeworks/Assignment-18/index.html
+++ b/Homeworks/Assignment-18/index.html
@@ -7,35 +7,43 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="calculator-body">
-     <input type="text" value="0" class="screen"/>
-     <div class="button-container">
-        <button class="btn">AC</button>
-        <button class="btn">7</button>
-        <button class="btn">4</button>
-        <button class="btn">1</button>
-        <button class="btn">0</button>
-
-        <button class="btn">M+</button>
-        <button class="btn">8</button>
-        <button class="btn">5</button>
-        <button class="btn">2</button>
-        <button class="btn">.</button>
-
-        <button class="btn">M+</button>
-        <button class="btn">8</button>
-        <button class="btn">5</button>
-        <button class="btn">2</button>
-        <button class="btn">.</button>
-
-        <button class="btn">M+</button>
-        <button class="btn">8</button>
-        <button class="btn">5</button>
-        <button class="btn">2</button>
-        <button class="btn">.</button>
-
-   </div>
+    <div class="container">
+      <div class="calculator">
+        <form>
+            <div class="display">
+                <input type="text" name="display" id="">
+            </div>
+            <div>
+                <input type="button" value="AC">
+                <input type="button" value="DE">
+                <input type="button" value=".">
+                <input type="button" value="/">
+            </div>
+            <div>
+                <input type="button" value="7">
+                <input type="button" value="8">
+                <input type="button" value="9">
+                <input type="button" value="*">
+            </div>
+            <div>
+                <input type="button" value="4">
+                <input type="button" value="5">
+                <input type="button" value="6">
+                <input type="button" value="-">
+            </div>
+            <div>
+                <input type="button" value="1">
+                <input type="button" value="2">
+                <input type="button" value="3">
+                <input type="button" value="+">
+            </div>
+            <div>
+                <input type="button" value="00">
+                <input type="button" value="0">
+                <input type="button" value="=" class="equals">
+            </div>
+        </form>
+      </div>  
     </div>
-    
 </body>
 </html>
