--- a/Homeworks/Assignment-16/index.html
+++ b/Homeworks/Assignment-16/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <div>
-    <div id="navbar">
-        <div class="line"></div>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#destinations">Destinations</a></li>
-            <li><a href="#hotels">Hotels</a></li>
-            <li><a href="#activites">Activities</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
+        <div id="navbar">
+            <div class="line"></div>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#destinations">Destinations</a></li>
+                <li><a href="#hotels">Hotels</a></li>
+                <li><a href="#activites">Activities</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </div>
+        
         <div class="box">
-
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoaTutv9k4PlUkDzy0glDnX7XO57Kudm4inik57mzPOw&s" class="icon-ing">
         </div>
     </div>
 </body>
+
 </html>
