--- a/Homeworks/Assignment-16/index.html
+++ b/Homeworks/Assignment-16/index.html
@@ -21,6 +21,15 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
+        <h1 class="heading">Popular Coffee</h1>
+        <div class="shop-cards">
+            <div class="card1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaRKlWmI9nZeW-FqHg5deVOArIxeP8C87iHw&s" alt="">
+            </div>
+            <div class="card1"></div>
+            <div class="card1"></div>
+
+        </div>
         
         <div class="box">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoaTutv9k4PlUkDzy0glDnX7XO57Kudm4inik57mzPOw&s" class="icon-ing">
