--- a/Homeworks/Assignment-19/index.html
+++ b/Homeworks/Assignment-19/index.html
@@ -7,20 +7,34 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-       <h1>Nature</h1>
-         <div class="container">
-            <div class="cards">
-              
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwE8ne0ySe1B04GWPsrYNUECu3i0FuPOAZBvL26ndAQg&s" alt="">
+         <div class="cards-container">    
 
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut officiis rem tempora tenetur, voluptate vel. Delectus unde aperiam deserunt harum magni, dignissimos perspiciatis eum doloremque? Quos repellendus non quam odio.</p>
+        <div class="card">
+            <div class="card-header-section" >
+                <img src="https://cdn.roadtocode.org/unique-features/live-classes-md.png" alt="" class="card-img">
+                <h1 class="card-heading">Live interactive classes</h1>
+            </div>
+                <p class="card-description">Attend live class and get your doubts cleared by the instructor in real-time just like a physical classroom. No boring pre-recorded videos.</p>
+        </div> 
 
+
+        <div class="card">
+            <div class="card-header-section" >
+                <img src="https://cdn.roadtocode.org/unique-features/affordable-md.png" alt="" class="card-img">
+                <h1 class="card-heading">Affordable Pricing</h1>
             </div>
-            <div class="cards">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia sapiente harum, id possimus minima exercitationem! Deleniti adipisci a porro blanditiis veniam. Quisquam esse saepe dignissimos aut eius itaque consequuntur molestiae?</p>
+                <p class="card-description">Attend live class and get your doubts cleared by the instructor in real-time just like a physical classroom. No boring pre-recorded videos.</p>
+        </div> 
+
+
+        <div class="card">
+            <div class="card-header-section" >
+                <img src="https://cdn.roadtocode.org/unique-features/doubt-resolution-md.png" alt="" class="card-img">
+                <h1 class="card-heading">Quick Doubt Resolutions.</h1>
             </div>
-            <div class="cards"></div>
-         </div>     
-         
+                <p class="card-description">Attend live class and get your doubts cleared by the instructor in real-time just like a physical classroom. No boring pre-recorded videos.</p>
+        </div> 
+
+    </div>  
 </body>
 </html>
