--- a/Homeworks/Assignment-20/index.html
+++ b/Homeworks/Assignment-20/index.html
@@ -14,7 +14,7 @@
             <div class="media-container">
                 <div class="media-items">
                     <ul>
-                        <li><a href=""><i class="fa fa-home" aria-hidden="true"></i></a></li>
+                        <li><a href=""></a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
                         <li><a href=""></a></li>
