--- a/Homeworks/Assignment-20/index.html
+++ b/Homeworks/Assignment-20/index.html
@@ -14,11 +14,11 @@
             <div class="media-container">
                 <div class="media-items">
                     <ul>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
+                        <li><a href=""><img src="house.png" alt=""></a></li>
+                        <li><a href=""><img src="support.png" alt=""></a></li>
+                        <li><a href=""><img src="team.png" alt=""></a></li>
+                        <li><a href=""><img src="user-at-phone.png" alt=""></a></li>
+                        <li><a href=""><img src="login-avatar.png" alt=""></a></li>
                     </ul>
                     
                 </div>
