--- a/Homeworks/Assignment-24/largest.html
+++ b/Homeworks/Assignment-24/largest.html
@@ -6,8 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
 
-    <script src="largest.js"></script>
+let number1 = prompt("Enter First Number");
+let number2= prompt("Enter Second Number");
+
+if(number1>number2)
+    {
+        console.log(`${number1} is greater`);
+    }
+    else{
+
+        console.log(`${number2} is greater`);
+
+    }
+
+    </script>
 </body>
 </html>
