done positive negative

--- a/Homeworks/Assignment-24/posNeg.html
+++ b/Homeworks/Assignment-24/posNeg.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        let number = prompt("Enter Any Number"); 
+
+        if(number > 0)
+        {
+            console.log("Number is Positive")
+        }
+        else{
+            console.log("Number is Negative");
+        }
+    </script>
 </body>
 </html>
