--- a/Homeworks/Assignment-24/evenOdd.html
+++ b/Homeworks/Assignment-24/evenOdd.html
@@ -8,7 +8,7 @@
 <body>
     <script>
                   
-    let number = prompt("Enter Any Number");  
+    let number = parseInt(prompt("Enter Any Number"));  
                   
     if(number%2 == 0)
     {
