--- a/Homeworks/Assignment-24/largest.html
+++ b/Homeworks/Assignment-24/largest.html
@@ -8,8 +8,8 @@
 <body>
     <script>
 
-let number1 = prompt("Enter First Number");
-let number2= prompt("Enter Second Number");
+let number1 = parseInt(prompt("Enter First Number"));
+let number2= parseInt(prompt("Enter Second Number"));
 
 if(number1>number2)
     {
