--- a/Homeworks/Assignment-24/posNeg.html
+++ b/Homeworks/Assignment-24/posNeg.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        let number = prompt("Enter Any Number"); 
+        let number = parseInt(prompt("Enter Any Number")); 
 
         if(number > 0)
         {
