--- a/Homeworks/Assignment-22/index.html
+++ b/Homeworks/Assignment-22/index.html
@@ -8,7 +8,36 @@
 <body>
     <script>
 
-       
+        //ASSIGNMENT OPERATOR
+        const id = 101;
+        console.log(`Constant id is ${id}`);
+
+        let marks = 400;
+        marks+=50;
+        console.log(`Total Marks is ${marks}`);
+
+        let RemoveMarks = 400;
+        RemoveMarks-=50;
+        console.log(`Remove Marks is ${RemoveMarks}`);
+
+        let multiplyMarks = 80;
+        multiplyMarks*=2;
+        console.log(`Multiply Marks is ${multiplyMarks}`);
+
+        let DivideMarks = 100;
+        DivideMarks/=2;
+        console.log(`Devide Marks is ${multiplyMarks}`);
+
+        let ModuloMarks = 277;
+        ModuloMarks%=2;
+        console.log(`Modulo Marks is ${ModuloMarks}`);
+
+
+
+
+
+
+
 
     </script>
 </body>
