--- a/Homeworks/Assignment-22/IncDecOperator.html
+++ b/Homeworks/Assignment-22/IncDecOperator.html
@@ -6,6 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+
+      let count = 20;
+      console.log(`Before Increment ${count}`);
+      count++;
+      console.log(`After Increment ${count}`);
+
+      let counts = 20;
+      console.log(`Before Increment ${counts}`);
+      ++counts;
+      console.log(`After Increment ${counts}`);
+
+      let DecCount = 20;
+      console.log(`Before Increment ${DecCount}`);
+      DecCount--;
+      console.log(`After Increment ${DecCount}`);
+
+      let DecCounts = 20;
+      console.log(`Before Increment ${DecCounts}`);
+      --DecCounts;
+      console.log(`After Increment ${DecCounts}`);
+    </script>
 </body>
 </html>
