--- a/Homeworks/Assignment-25/practice.html
+++ b/Homeworks/Assignment-25/practice.html
@@ -10,19 +10,19 @@
 
          const percentage = parseInt(prompt("Enter your percentage :"));
 
-         if(percentage>=90)
+         if(percentage>=90 && percentage<99)
          {
             console.log('A+ Grade')
          }
-         else if(percentage>=80)
+         else if(percentage>=80 && percentage<89)
          {
             console.log('A Grade')
          }
-         else if(percentage>=70)
+         else if(percentage>=70 && percentage<79)
          {
             console.log('B+ Grade')
          }
-         else if(percentage>=60)
+         else if(percentage>=60 && percentage<69)
          {
             console.log('B Grade')
          }
