--- a/Homeworks/Assignment-27/MouseEvent.html
+++ b/Homeworks/Assignment-27/MouseEvent.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="https://img-cdn.pixlr.com/image-generator/history/65bb506dcb310754719cf81f/ede935de-1138-4f66-8ed7-44bd16efc709/medium.webp" style="height: " onmouseover="A()" onmousemove="B()" onmouseout="C()">
+    <img src="https://img-cdn.pixlr.com/image-generator/history/65bb506dcb310754719cf81f/ede935de-1138-4f66-8ed7-44bd16efc709/medium.webp" onmouseover="A()" onmousemove="B()" onmouseout="C()">
 
     <script>
         function A(){
